--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
 </p>
 
 <p style="text-align:justify;background-color:#D7BDE2">
-	<strong>Call for papers</strong>: <a class="btn btn-red" href="https://ai-activities.github.io/EAI-workshop-24/">3rd Workshop on Ethical Artificial Intelligence: Methods and Applications (EAI-KDD'24)</a> (held in conjunction with ACM SIGKDD’24).
+	<strong>Call for papers</strong>: <a href="https://ai-activities.github.io/EAI-workshop-24/">3rd Workshop on Ethical Artificial Intelligence: Methods and Applications (EAI-KDD'24)</a> (held in conjunction with ACM SIGKDD’24).
 	<br>
-	<strong>Call for papers</strong>: <a class="btn btn-red" href="https://ai-activities.github.io/UDM-workshop-24/">3rd Workshop on Uncertainty Reasoning and Quantification in Decision Making (UDM-KDD'24)</a> (held in conjunction with ACM SIGKDD’24).
+	<strong>Call for papers</strong>: <a href="https://ai-activities.github.io/UDM-workshop-24/">3rd Workshop on Uncertainty Reasoning and Quantification in Decision Making (UDM-KDD'24)</a> (held in conjunction with ACM SIGKDD’24).
 	<br>	
 </p>
 	
