--- a/index.html
+++ b/index.html
@@ -114,14 +114,10 @@
 </p>
 
 <p style="text-align:justify;background-color:#D7BDE2">
-	<ol>
-		<li>
-			<strong>Call for papers</strong>: <a href="https://ai-activities.github.io/EAI-workshop-24/">3rd Workshop on Ethical Artificial Intelligence: Methods and Applications (EAI-KDD'24)</a> (held in conjunction with ACM SIGKDD’24).
-		</li>
-		<li>	
-			<strong>Call for papers</strong>: <a href="https://ai-activities.github.io/UDM-workshop-24/">3rd Workshop on Uncertainty Reasoning and Quantification in Decision Making (UDM-KDD'24)</a> (held in conjunction with ACM SIGKDD’24).
-		</li>
-	</ol>
+	<strong>Call for papers</strong>: <a href="https://ai-activities.github.io/EAI-workshop-24/">3rd Workshop on Ethical Artificial Intelligence: Methods and Applications (EAI-KDD'24)</a> (held in conjunction with ACM SIGKDD’24).
+</p>
+<p style="text-align:justify;background-color:#D7BDE2">
+	<strong>Call for papers</strong>: <a href="https://ai-activities.github.io/UDM-workshop-24/">3rd Workshop on Uncertainty Reasoning and Quantification in Decision Making (UDM-KDD'24)</a> (held in conjunction with ACM SIGKDD’24).
 </p>
 	
 <h2>Biography</h2>
