--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[05/2024] One paper is accepted by KDD 2024 (research track). </li>
 	<li type="circle">[05/2024] I will serve as a PC member for ICDM 2024. </li>  
 	<li type="circle">[05/2024] We're delighted to announce that two workshop proposals (RobustMLDS and TrustML4Health) have been accepted by IEEE Bigdata 2024. </li>
 	<li type="circle">[04/2024] Two papes are accepted by IJCAI 2024. </li>
@@ -162,6 +163,11 @@
 <strong>2024</strong>
 <ol>	
 	<li>
+		<strong>[KDD'24]</strong> Algorithmic Fairness Generalization under Covariate and Dependence Shifts Simultaneously. (To appear)</br>
+		<font color=red>Chen Zhao</font><sup>*</sup>, Kai Jiang<sup>*</sup>, Xintao Wu, Haoliang Wang, Latifur Khan, Christan Earl Grant, Feng Chen. (Equal Contribution)<br/>
+		<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em> (<strong>research track</strong>), 2024
+	</li>
+	<li>
 		<strong>[IJCAI'24]</strong> Supervised Algorithmic Fairness in Distribution Shifts: A Survey. <a class="btn btn-red" href="https://arxiv.org/pdf/2402.01327v3">PDF</a></br>
 		Minglai Shao<sup>*</sup>, Dong Li<sup>*</sup>, <font color=red>Chen Zhao</font><sup>*</sup>, Xintao Wu, Yujie Lin, Qin Tian. (Equal Contribution)<br/>
 		<em>In Proceedings of the 33rd International Joint Conference on Artificial Intelligence</em>, 2024
@@ -186,11 +192,6 @@
 		Dennis Melamed, Cameron Johnson, Isaac D. Gerg, <font color=red>Chen Zhao</font>, Russell Blue, Anthony Hoogs, Brian Clipp, Philip Morrone<br/>
 		<em>In Proceedings of the IEEE International Geoscience and Remote Sensing Symposium</em>, 2024
 	</li>
-<!-- 	<li>
-		<strong>[ArXiv]</strong> Supervised Algorithmic Fairness in Distribution Shifts: A Survey. <a class="btn btn-red" href="https://arxiv.org/pdf/2402.01327.pdf">PDF</a></br>
-		Yujie Lin<sup>*</sup>, Dong Li<sup>*</sup>, <font color=red>Chen Zhao</font><sup>*</sup>, Xintao Wu, Qin Tian, Minglai Shao. (<sup>*</sup>Equal contribution)<br/>
-		<em>ArXiv preprint, 2402.01327</em>, 2024
-	</li> -->
 	<li>
 		<strong>[TKDD'24]</strong> Dynamic Environment Responsive Online Meta-Learning with Fairness Awareness. <a class="btn btn-red" href="https://dl.acm.org/doi/10.1145/3648684">PDF</a></br>
 		<font color=red>Chen Zhao</font>, Feng Mi, Xintao Wu, Kai Jiang, Latifur Khan, Feng Chen.<br/>
@@ -204,11 +205,6 @@
 		<strong>[NeurIPS'23-W]</strong> Achieving Counterfactual Fairness in Changing Environments via Sequential Autoencoder. </br>
 		Yujie Lin, <font color=red>Chen Zhao</font>, Minglai Shao, Xujiang Zhao, Baoluo Meng, Haifeng Chen<br/>
 		<em>NeurIPS Workshop on Algorithmic Fairness through the Lens of Time (AFT)</em>, 2023
-	</li>
-	<li>
-		<strong>[ArXiv]</strong> Fairness-Aware Domain Generalization under Covariate and Dependence Shifts. <a class="btn btn-red" href="https://arxiv.org/pdf/2311.13816.pdf">PDF</a></br>
-		<font color=red>Chen Zhao</font>, Kai Jiang, Xintao Wu, Haoliang Wang, Latifur Khan, Christan Grant, Feng Chen<br/>
-		<em>ArXiv preprint, 2311.13816</em>, 2023
 	</li>
 	<li>
 		<strong>[ArXiv]</strong> Pursuing Counterfactual Fairness via Sequential Autoencoder Across Domains. <a class="btn btn-red" href="https://arxiv.org/pdf/2309.13005.pdf">PDF</a></br>
