--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 		<em>In Proceedings of the IEEE International Geoscience and Remote Sensing Symposium</em>, 2024
 	</li>
 	<li>
-		<strong>[TKDD'24]</strong> Dynamic Environment Responsive Online Meta-Learning with Fairness Awareness. <a class="btn btn-red" href="https://dl.acm.org/doi/10.1145/3648684">PDF</a></br>
+		<strong>[TKDD]</strong> Dynamic Environment Responsive Online Meta-Learning with Fairness Awareness. <a class="btn btn-red" href="https://dl.acm.org/doi/10.1145/3648684">PDF</a></br>
 		<font color=red>Chen Zhao</font>, Feng Mi, Xintao Wu, Kai Jiang, Latifur Khan, Feng Chen.<br/>
 		<em>The ACM Transactions on Knowledge Discovery from Data</em>, 2024
 	</li>
