--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[05/2024] I will serve as a reviewer for NeurIPS 2024. </li> 
 	<li type="circle">[05/2024] One paper is accepted by KDD 2024 (research track). </li>
 	<li type="circle">[05/2024] I will serve as a PC member for ICDM 2024. </li>  
 	<li type="circle">[05/2024] We're delighted to announce that two workshop proposals (RobustMLDS and TrustML4Health) have been accepted by IEEE Bigdata 2024. </li>
@@ -372,7 +373,7 @@
 		<li type="disc"> [PC Member] SIAM International Conference on Data Mining (SDM), 2022, 2024.</li>
 		<li type="disc"> [Reviewer] International Conference on Learning Representations (ICLR), 2024.</li>
 		<li type="disc"> [PC Member] IEEE International Conference on Big Data (BigData), 2021-2024.</li>
-		<li type="disc"> [Reviewer] The Conference on Neural Information Processing Systems (NeurIPS), 2023.</li>
+		<li type="disc"> [Reviewer] The Conference on Neural Information Processing Systems (NeurIPS), 2023-2024.</li>
 		<li type="disc"> [PC Member on Research Track] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2020-2024.</li>
 		<li type="disc"> [PC Member on Applied Science Track] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2020-2023.</li>
 		<li type="disc"> [Reviewer] IEEE/CVF Winter Conference on Applications of Computer Vision (WACV), 2023.</li>
