--- a/index.html
+++ b/index.html
@@ -114,10 +114,13 @@
 </p>
 
 <p style="text-align:justify;background-color:#D7BDE2">
-	<strong>Call for papers</strong>: <a href="https://ai-activities.github.io/EAI-workshop-24/">3rd Workshop on Ethical Artificial Intelligence: Methods and Applications (EAI-KDD'24)</a> (held in conjunction with ACM SIGKDD’24).
+	<strong>Call for papers</strong>: <a href="https://ai-activities.github.io/EAI-workshop-24/">3rd Workshop on Ethical Artificial Intelligence: Methods and Applications (EAI-KDD'24)</a> (held in conjunction with ACM SIGKDD 2024).
 </p>
 <p style="text-align:justify;background-color:#D7BDE2">
-	<strong>Call for papers</strong>: <a href="https://ai-activities.github.io/UDM-workshop-24/">3rd Workshop on Uncertainty Reasoning and Quantification in Decision Making (UDM-KDD'24)</a> (held in conjunction with ACM SIGKDD’24).
+	<strong>Call for papers</strong>: <a href="https://ai-activities.github.io/UDM-workshop-24/">3rd Workshop on Uncertainty Reasoning and Quantification in Decision Making (UDM-KDD'24)</a> (held in conjunction with ACM SIGKDD 2024).
+</p>
+<p style="text-align:justify;background-color:#D7BDE2">
+	<strong>Call for papers</strong>: <a href="https://sites.google.com/view/robustmlds24/home">1st Workshop on Robust Machine Learning for Distribution Shifts (RobustMLDS’24)</a> (held in conjunction with IEEE BigData 2024).
 </p>
 	
 <h2>Biography</h2>
