--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
 <p style="text-align:justify;background-color:#D7BDE2">
 	<strong>Call for papers</strong>: <a href="https://sites.google.com/view/robustmlds24/home">1st Workshop on Robust Machine Learning for Distribution Shifts (RobustMLDS’24)</a> (held in conjunction with IEEE BigData 2024).
 </p>
+<p style="text-align:justify;background-color:#D7BDE2">
+	<strong>Call for papers</strong>: <a href="https://sites.google.com/view/trustml4health24/">IEEE Workshop on Trustworthy Machine Learning for Healthcare (TrustML4Health'24)</a> (held in conjunction with IEEE BigData 2024).
+</p>
 	
 <h2>Biography</h2>
 	<p style="text-align:justify;">
