--- a/index.html
+++ b/index.html
@@ -416,12 +416,12 @@
 	<ul>
 		<li type="disc"> [<font color=red>Orgnizer</font>, <font color=red>Chair</font>] Workshops on Robust Machine Learning for Distribution Shifts (RobustMLDS), 
 			<ul>
-				<li type="circle"> 1st workshop at IEEE Bigdata'24 </li>
+				<li type="circle"> <a href="https://sites.google.com/view/robustmlds24/home">1st workshop at IEEE Bigdata'24 </li>
 			</ul>
 		</li>
 		<li type="disc"> [<font color=red>Orgnizer</font>, <font color=red>Chair</font>] Workshops on Trustworthy Machine Learning for Healthcare ((TrustML4Health), 
 			<ul>
-				<li type="circle"> 1st workshop at IEEE Bigdata'24 </li>
+				<li type="circle"> <a href="https://sites.google.com/view/trustml4health24/">1st workshop at IEEE Bigdata'24 </li>
 			</ul>
 		</li>
 		<li type="disc"> [<font color=red>Orgnizer</font>, <font color=red>Chair</font>] Workshops on Ethical Artificial Intelligence (EAI): Methods and Applications, 
