--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
 	<em>NOTE: Unfortunately, due to the volume of emails, I will not respond to all of them.</em>
 </p>
 
-<p style="text-align:justify;background-color:#D7BDE2">
-	<strong>Call for papers</strong>: <a href="https://ai-activities.github.io/EAI-workshop-24/">3rd Workshop on Ethical Artificial Intelligence: Methods and Applications (EAI-KDD'24)</a> (held in conjunction with ACM SIGKDD 2024).
+<p style="text-align:justify;background-color:#3DED52">
+	<strong>Call for participation</strong>: <a href="https://ai-activities.github.io/EAI-workshop-24/">3rd Workshop on Ethical Artificial Intelligence: Methods and Applications (EAI-KDD'24)</a> (held in conjunction with ACM SIGKDD 2024).
 </p>
-<p style="text-align:justify;background-color:#D7BDE2">
-	<strong>Call for papers</strong>: <a href="https://ai-activities.github.io/UDM-workshop-24/">3rd Workshop on Uncertainty Reasoning and Quantification in Decision Making (UDM-KDD'24)</a> (held in conjunction with ACM SIGKDD 2024).
+<p style="text-align:justify;background-color:#3DED52">
+	<strong>Call for participation</strong>: <a href="https://ai-activities.github.io/UDM-workshop-24/">3rd Workshop on Uncertainty Reasoning and Quantification in Decision Making (UDM-KDD'24)</a> (held in conjunction with ACM SIGKDD 2024).
 </p>
 <p style="text-align:justify;background-color:#D7BDE2">
 	<strong>Call for papers</strong>: <a href="https://sites.google.com/view/robustmlds24/home">1st Workshop on Robust Machine Learning for Distribution Shifts (RobustMLDS’24)</a> (held in conjunction with IEEE BigData 2024).
