--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[06/2024] I will serve as a reviewer for ACML 2024. </li> 
 	<li type="circle">[05/2024] I will serve as a reviewer for NeurIPS 2024. </li> 
 	<li type="circle">[05/2024] One paper is accepted by KDD 2024 (research track). </li>
 	<li type="circle">[05/2024] I will serve as a PC member for ICDM 2024. </li>  
@@ -371,6 +372,7 @@
 		<li type="disc"> [PC Member] International Conference on Machine Learning (ICML), 2024.</li>
 		<li type="disc"> [PC Member] International Joint Conference on Artificial Intelligence (IJCAI), 2023-2024.</li>
 		<li type="disc"> [PC Member] The Web Conference (WWW), 2024.</li>
+		<li type="disc"> [Reviewer] The Asian Conference on Machine Learning (ACML), 2024.</li>
 		<li type="disc"> [PC Member] European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML PKDD), 2023-2024.</li>
 		<li type="disc"> [PC Member] Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD), 2024.</li>
 		<li type="disc"> [PC Member] AAAI Conference on Artificial Intelligence (AAAI), 2022, 2024.</li>
