--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[07/2024] Five papers are accepted by KDD workshops 2024. </li>
 	<li type="circle">[06/2024] I will serve as a reviewer for ACML 2024. </li> 
 	<li type="circle">[05/2024] I will serve as a reviewer for NeurIPS 2024. </li> 
 	<li type="circle">[05/2024] One paper is accepted by KDD 2024 (research track). </li>
@@ -205,6 +206,31 @@
 		<font color=red>Chen Zhao</font>, Feng Mi, Xintao Wu, Kai Jiang, Latifur Khan, Feng Chen.<br/>
 		<em>The ACM Transactions on Knowledge Discovery from Data</em>, 2024
 	</li>
+	<li>
+		<strong>[KDD'24-W]</strong> Semantic OOD Detection under Covariate Shift on Graphs with Diffusion Model. </br>
+		Zhixia He, <font color=red>Chen Zhao</font>, Minglai Shao, Yujie Lin, Dong Li<br/>
+		<em>KDD Workshop on Uncertainty Reasoning and Quantification in Decision Making</em>, 2024
+	</li>
+	<li>
+		<strong>[KDD'24-W]</strong> IDGG: Invariant Learning for Out-of-Distribution Generalization on Graphs. </br>
+		Qin Tian, Wenjun Wang, Minglai Shao, <font color=red>Chen Zhao</font>, Dong Li<br/>
+		<em>KDD Workshop on Uncertainty Reasoning and Quantification in Decision Making</em>, 2024
+	</li>
+	<li>
+		<strong>[KDD'24-W]</strong> HyperDG: A Hypergraph-Based Approach for Dynamic Graph Node Classification under Spatio-Temporal Shif. </br>
+		Xiaoxu Ma, <font color=red>Chen Zhao</font>, Minglai Shao<br/>
+		<em>KDD Workshop on Uncertainty Reasoning and Quantification in Decision Making</em>, 2024
+	</li>
+	<li>
+		<strong>[KDD'24-W]</strong> Out-of-Distribution Detection for Heterogeneous Graph Neural Networks. </br>
+		Tao Yin, <font color=red>Chen Zhao</font>, Minglai Shao<br/>
+		<em>KDD Workshop on Uncertainty Reasoning and Quantification in Decision Making</em>, 2024
+	</li>
+	<li>
+		<strong>[KDD'24-W]</strong> Fair Data Generation via Score-based Diffusion Model. </br>
+		Yujie Lin, Dong Li, <font color=red>Chen Zhao</font>, Minglai Shao<br/>
+		<em>KDD workshop on Ethical Artificial Intelligence: Methods and Applications</em>, 2024
+	</li>
 </ol>
 	
 <strong>2023</strong>
@@ -212,13 +238,13 @@
 	<li>
 		<strong>[NeurIPS'23-W]</strong> Achieving Counterfactual Fairness in Changing Environments via Sequential Autoencoder. </br>
 		Yujie Lin, <font color=red>Chen Zhao</font>, Minglai Shao, Xujiang Zhao, Baoluo Meng, Haifeng Chen<br/>
-		<em>NeurIPS Workshop on Algorithmic Fairness through the Lens of Time (AFT)</em>, 2023
+		<em>NeurIPS Workshop on Algorithmic Fairness through the Lens of Time</em>, 2023
 	</li>
-	<li>
+<!-- 	<li>
 		<strong>[ArXiv]</strong> Pursuing Counterfactual Fairness via Sequential Autoencoder Across Domains. <a class="btn btn-red" href="https://arxiv.org/pdf/2309.13005.pdf">PDF</a></br>
 		Yujie Lin, <font color=red>Chen Zhao</font>, Minglai Shao, Baoluo Meng, Xujiang Zhao, Haifeng Chen<br/>
 		<em>ArXiv preprint, 2309.13005</em>, 2023
-	</li>
+	</li> -->
 	<li>
 		<strong>[ArXiv]</strong> Towards Effective Semantic OOD Detection in Unseen Domains: A Domain Generalization Perspective. <a class="btn btn-red" href="https://arxiv.org/pdf/2309.10209.pdf">PDF</a></br>
 		Haoliang Wang, <font color=red>Chen Zhao</font>, Yunhui Guo, Kai Jiang, Feng Chen<br/>
@@ -242,17 +268,17 @@
 	<li>
 		<strong>[KDD'23-W]</strong> Learning Fair and Domain Generalization Representation. </br>
 		Dong Li, <font color=red>Chen Zhao</font>, Minglai Shao, Xujiang Zhao<br/>
-		<em>KDD workshop on Ethical Artificial Intelligence: Methods and Applications (EAI)</em>, 2023
+		<em>KDD workshop on Ethical Artificial Intelligence: Methods and Applications</em>, 2023
 	</li>
 	<li>
 		<strong>[KDD'23-W]</strong> Adaptation Speed of Causal Models Concerning Fairness. </br>
 		Yujie Lin, <font color=red>Chen Zhao</font>, Minglai Shao, Xujiang Zhao, Haifeng Chen<br/>
-		<em>KDD workshop on Ethical Artificial Intelligence: Methods and Applications (EAI)</em>, 2023
+		<em>KDD workshop on Ethical Artificial Intelligence: Methods and Applications</em>, 2023
 	</li>
 	<li>
 		<strong>[AAAI'23-W]</strong> Detecting Multi-Label Out-of-Distribution Nodes on Graphs. </br>
 		Ruomeng Ding, Xujiang Zhao, <font color=red>Chen Zhao</font>, Minglai Shao<br/>
-		<em>AAAI workshop on Uncertainty Reasoning and Quantification in Decision Making (UDM)</em>, 2023
+		<em>AAAI workshop on Uncertainty Reasoning and Quantification in Decision Making</em>, 2023
 	</li>
 	<li>
 		<strong>[CVPR'23]</strong> Open Set Action Recognition via Multi-Label Evidential Learning. <a class="btn btn-red" href="https://arxiv.org/pdf/2303.12698.pdf">PDF</a></br>
@@ -278,11 +304,11 @@
 		<font color=red>Chen Zhao</font>, Feng Mi, Xintao Wu, Kai Jiang, Latifur Khan, Feng Chen<br/>
 		<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em> (<strong>research track</strong>), 2022
 	</li>
-	<li>
+<!-- 	<li>
 		<strong>[ArXiv]</strong> xFBD: Focused Building Damage Dataset and Analysis. <a class="btn btn-red" href="https://arxiv.org/pdf/2212.13876.pdf">PDF</a></br>
 		Dennis Melamed, Cameron Johnson, <font color=red>Chen Zhao</font>, Russell Blue, Philip Morrone, Anthony Hoogs, Brian Clipp<br/>
 		<em>ArXiv preprint, 2212.13876</em>, 2022
-	</li>
+	</li> -->
 	<li>
 		<strong>[PAKDD'22]</strong> Layer Adaptive Deep Neural Networks for Out-of-distribution Detection. <a class="btn btn-red" href="https://arxiv.org/abs/2203.00192">PDF</a></br>
 		Haoliang Wang, <font color=red>Chen Zhao</font>, Xujiang Zhao, Feng Chen<br/>
@@ -310,7 +336,7 @@
 	<li>
 		<strong>[NeurIPS’21-W]</strong> A Reweighted Meta Learning Framework for Robust Few Shot Learning. </br>
 		Krishnateja Killamsetty, Changbin Li, <font color=red>Chen Zhao</font>, Rishabh Krishnan Iyer, Feng Chen<br/>
-		<em>NeurIPS Workshop on Meta-Learning (MetaLearn)</em>, 2021
+		<em>NeurIPS Workshop on Meta-Learning</em>, 2021
 	</li>
 	<li>
 		<strong>[WWW'21]</strong> CLEAR: Contrastive-Prototype Learning with Drift Estimation for Resource Constrained Stream Mining. <a class="btn btn-red" href="https://dl.acm.org/doi/abs/10.1145/3442381.3449820">PDF</a> </br>
@@ -538,7 +564,7 @@
 						   
 			<td valign="top">
 				<div style="clear:both;">
-				<p align="right"><font size="2">Last Updated on May, 2024<br>
+				<p align="right"><font size="2">Last Updated on July, 2024<br>
 				Published with <a href="https://pages.github.com/">GitHub Pages</a></font></p>
 				</div>
 			</td>
