--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 <strong>2024</strong>
 <ol>	
 	<li>
-		<strong>[KDD'24]</strong> Algorithmic Fairness Generalization under Covariate and Dependence Shifts Simultaneously. (To appear)</br>
+		<strong>[KDD'24]</strong> Algorithmic Fairness Generalization under Covariate and Dependence Shifts Simultaneously. <a class="btn btn-red" href="https://arxiv.org/pdf/2311.13816v2">PDF</a></br>
 		<font color=red>Chen Zhao</font><sup>*</sup>, Kai Jiang<sup>*</sup>, Xintao Wu, Haoliang Wang, Latifur Khan, Christan Earl Grant, Feng Chen. (Equal Contribution)<br/>
 		<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em> (<strong>research track</strong>), 2024
 	</li>
