--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[07/2024] One paper is accepted by ECAI 2024. </li>
 	<li type="circle">[07/2024] Five papers are accepted by KDD workshops 2024. </li>
 	<li type="circle">[06/2024] I will serve as a reviewer for ACML 2024. </li> 
 	<li type="circle">[05/2024] I will serve as a reviewer for NeurIPS 2024. </li> 
@@ -171,6 +172,11 @@
 
 <strong>2024</strong>
 <ol>	
+	<li>
+		<strong>[ECAI'24]</strong> Causal Diffusion Autoencoders: Toward Counterfactual Generation via Diffusion Probabilistic Models. (To appear)</br>
+		Aneesh Komanduri, <font color=red>Chen Zhao</font>, Feng Chen, Xintao Wu<br/>
+		<em>In Proceedings of the European Conference on Artificial Intelligence</em>, 2024
+	</li>
 	<li>
 		<strong>[KDD'24]</strong> Algorithmic Fairness Generalization under Covariate and Dependence Shifts Simultaneously. <a class="btn btn-red" href="https://arxiv.org/pdf/2311.13816v2">PDF</a></br>
 		<font color=red>Chen Zhao</font><sup>*</sup>, Kai Jiang<sup>*</sup>, Xintao Wu, Haoliang Wang, Latifur Khan, Christan Earl Grant, Feng Chen. (Equal Contribution)<br/>
