--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[07/2024] I will serve as a PC member for ACM SIGKDD 2025. </li>
 	<li type="circle">[07/2024] One paper is accepted by ECAI 2024. </li>
 	<li type="circle">[07/2024] Five papers are accepted by KDD workshops 2024. </li>
 	<li type="circle">[06/2024] I will serve as a reviewer for ACML 2024. </li> 
@@ -414,7 +415,7 @@
 		<li type="disc"> [Reviewer] International Conference on Learning Representations (ICLR), 2024.</li>
 		<li type="disc"> [PC Member] IEEE International Conference on Big Data (BigData), 2021-2024.</li>
 		<li type="disc"> [Reviewer] The Conference on Neural Information Processing Systems (NeurIPS), 2023-2024.</li>
-		<li type="disc"> [PC Member on Research Track] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2020-2024.</li>
+		<li type="disc"> [PC Member on Research Track] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2020-2025.</li>
 		<li type="disc"> [PC Member on Applied Science Track] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2020-2023.</li>
 		<li type="disc"> [Reviewer] IEEE/CVF Winter Conference on Applications of Computer Vision (WACV), 2023.</li>
 		<li type="disc"> [PC Member] ACM International Conference on Information and Knowledge Management (CIKM), 2022-2024.</li>
