--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[07/2024] One paper is accepted by CIKM 2024. </li>
 	<li type="circle">[07/2024] I will serve as a PC member for ACM SIGKDD 2025. </li>
 	<li type="circle">[07/2024] One paper is accepted by ECAI 2024. </li>
 	<li type="circle">[07/2024] Five papers are accepted by KDD workshops 2024. </li>
@@ -173,6 +174,11 @@
 
 <strong>2024</strong>
 <ol>	
+	<li>
+		<strong>[CIKM'24]</strong> Learning Fair Invariant Representations under Covariate and Correlation Shifts Simultaneously. (To appear)</br>
+		Dong Li, <font color=red>Chen Zhao</font>, Minglai Shao, Wenjun Wang.<br/>
+		<em>In Proceedings of the ACM International Conference on Information and Knowledge Management</em> (<strong>full paper</strong>), 2024
+	</li>
 	<li>
 		<strong>[ECAI'24]</strong> Causal Diffusion Autoencoders: Toward Counterfactual Generation via Diffusion Probabilistic Models. (To appear)</br>
 		Aneesh Komanduri, <font color=red>Chen Zhao</font>, Feng Chen, Xintao Wu<br/>
