--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 		<em>In Proceedings of the ACM International Conference on Information and Knowledge Management</em> (<strong>full paper</strong>), 2024
 	</li>
 	<li>
-		<strong>[ECAI'24]</strong> Causal Diffusion Autoencoders: Toward Counterfactual Generation via Diffusion Probabilistic Models. (To appear)</br>
+		<strong>[ECAI'24]</strong> Causal Diffusion Autoencoders: Toward Counterfactual Generation via Diffusion Probabilistic Models. <a class="btn btn-red" href="https://arxiv.org/abs/2404.17735">PDF</a></br>
 		Aneesh Komanduri, <font color=red>Chen Zhao</font>, Feng Chen, Xintao Wu<br/>
 		<em>In Proceedings of the European Conference on Artificial Intelligence</em>, 2024
 	</li>
