--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[08/2024] I will serve as a PC member for AAAI 2025. </li>
 	<li type="circle">[07/2024] One paper is accepted by CIKM 2024. </li>
 	<li type="circle">[07/2024] I will serve as a PC member for ACM SIGKDD 2025. </li>
 	<li type="circle">[07/2024] One paper is accepted by ECAI 2024. </li>
@@ -414,7 +415,7 @@
 		<li type="disc"> [Reviewer] The Asian Conference on Machine Learning (ACML), 2024.</li>
 		<li type="disc"> [PC Member] European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML PKDD), 2023-2024.</li>
 		<li type="disc"> [PC Member] Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD), 2024.</li>
-		<li type="disc"> [PC Member] AAAI Conference on Artificial Intelligence (AAAI), 2022, 2024.</li>
+		<li type="disc"> [PC Member] AAAI Conference on Artificial Intelligence (AAAI), 2022, 2024-2025.</li>
 		<li type="disc"> [Reviewer] IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP), 2024. </li>
 		<li type="disc"> [Reviewer] International Conference on Artificial Intelligence and Statistics (AISTATS), 2021, 2024. </li>
 		<li type="disc"> [PC Member] SIAM International Conference on Data Mining (SDM), 2022, 2024.</li>
