--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 	</li>
 	<li>
 		<strong>[IGARSS'24]</strong> Uncovering Bias in Building Damage Assessment from Satellite Imagery. <a class="btn btn-red" href="https://www.researchgate.net/profile/Isaac-Gerg/publication/377329316_UNCOVERING_BIAS_IN_BUILDING_DAMAGE_ASSESSMENT_FROM_SATELLITE_IMAGERY/links/65a1869fc77ed94047736f5d/UNCOVERING-BIAS-IN-BUILDING-DAMAGE-ASSESSMENT-FROM-SATELLITE-IMAGERY.pdf">PDF</a></br>
-		Dennis Melamed, Cameron Johnson, Isaac D. Gerg, <font color=red>Chen Zhao</font>, Russell Blue, Anthony Hoogs, Brian Clipp, Philip Morrone<br/>
+		Dennis Melamed, Cameron Johnson, Isaac D. Gerg, <font color=red>Chen Zhao</font>, Russell Blue, Philip Morrone, Anthony Hoogs, Brian Clipp, <br/>
 		<em>In Proceedings of the IEEE International Geoscience and Remote Sensing Symposium</em>, 2024
 	</li>
 	<li>
