--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[08/2024] I am invited to serve as the tutorial co-chair for PAKDD 2025. </li>
 	<li type="circle">[08/2024] I will serve as a PC member for AAAI 2025. </li>
 	<li type="circle">[07/2024] One paper is accepted by CIKM 2024. </li>
 	<li type="circle">[07/2024] I will serve as a PC member for ACM SIGKDD 2025. </li>
@@ -456,6 +457,7 @@
 	</ul>
   <h3>Others</h3>
 	<ul>
+		<li type="disc"> [<font color=red>Tutorial Co-Chair</font>] Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD), 2025.</li>
 		<li type="disc"> [<font color=red>Orgnizer</font>, <font color=red>Chair</font>] Workshops on Robust Machine Learning for Distribution Shifts (RobustMLDS), 
 			<ul>
 				<li type="circle"> <a href="https://sites.google.com/view/robustmlds24/home">1st workshop</a> at IEEE Bigdata'24 </li>
