--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[08/2024] I will serve as a reviewer for ICLR 2025. </li>
 	<li type="circle">[08/2024] I am invited to serve as the tutorial co-chair for PAKDD 2025. </li>
 	<li type="circle">[08/2024] I will serve as a PC member for AAAI 2025. </li>
 	<li type="circle">[07/2024] One paper is accepted by CIKM 2024. </li>
@@ -420,7 +421,7 @@
 		<li type="disc"> [Reviewer] IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP), 2024. </li>
 		<li type="disc"> [Reviewer] International Conference on Artificial Intelligence and Statistics (AISTATS), 2021, 2024. </li>
 		<li type="disc"> [PC Member] SIAM International Conference on Data Mining (SDM), 2022, 2024.</li>
-		<li type="disc"> [Reviewer] International Conference on Learning Representations (ICLR), 2024.</li>
+		<li type="disc"> [Reviewer] International Conference on Learning Representations (ICLR), 2024-2025.</li>
 		<li type="disc"> [PC Member] IEEE International Conference on Big Data (BigData), 2021-2024.</li>
 		<li type="disc"> [Reviewer] The Conference on Neural Information Processing Systems (NeurIPS), 2023-2024.</li>
 		<li type="disc"> [PC Member on Research Track] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2020-2025.</li>
