--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[08/2024] I will serve as a PC member for WWW 2025. </li>
 	<li type="circle">[08/2024] I will serve as a reviewer for ICLR 2025. </li>
 	<li type="circle">[08/2024] I am invited to serve as the tutorial co-chair for PAKDD 2025. </li>
 	<li type="circle">[08/2024] I will serve as a PC member for AAAI 2025. </li>
