--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 <strong>2024</strong>
 <ol>	
 	<li>
-		<strong>[CIKM'24]</strong> Learning Fair Invariant Representations under Covariate and Correlation Shifts Simultaneously. (To appear)</br>
+		<strong>[CIKM'24]</strong> Learning Fair Invariant Representations under Covariate and Correlation Shifts Simultaneously. <a class="btn btn-red" href="https://arxiv.org/abs/2408.09312">PDF</a></br>
 		Dong Li, <font color=red>Chen Zhao</font>, Minglai Shao, Wenjun Wang.<br/>
 		<em>In Proceedings of the ACM International Conference on Information and Knowledge Management</em> (<strong>full paper</strong>), 2024
 	</li>
