--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
 	<li type="circle">[08/2024] I will serve as a reviewer for ICASSP 2025. </li>
-	<li type="circle">[08/2024] I will serve as a session chair for the research track of KDD 2024. </li>
+<!-- 	<li type="circle">[08/2024] I will serve as a session chair for the research track of KDD 2024. </li> -->
 	<li type="circle">[08/2024] I will serve as a PC member for WWW 2025. </li>
 	<li type="circle">[08/2024] I will serve as a reviewer for ICLR 2025. </li>
 	<li type="circle">[08/2024] I am invited to serve as the tutorial co-chair for PAKDD 2025. </li>
@@ -490,7 +490,7 @@
 		<li type="disc"> [<font color=red>Co-Chair</font>] <a href="https://www3.cs.stonybrook.edu/~ieeebigdata2024/bigdatacup.html">IEEE BigData 2024 Big Data Cup Challenges</a>, 2024.</li>
 		<li type="disc"> [<font color=red>Panelist</font>] National Science Foundation panels, 2023(x1), 2024(x3).</li>
 		<li type="disc"> [<font color=red>Orgnizer</font>] <a href="https://www.ecs.baylor.edu/get-involved/southwest-data-science-conference-2024-baylor-university">The Southwest Data Science Conference</a>, 2024.</li>
-		<li type="disc"> [<font color=red>Session Chair</font>] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2023-2024.</li>
+		<li type="disc"> [<font color=red>Session Chair</font>] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2023.</li>
 		<li type="disc"> [Mentor at <a href="https://kdd.org/kdd2022/kdd-uc.html">KDD-Undergraduate Consortium</a>] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2022.</li>
 		<li type="disc"> [Editorial Board Member] American Journal of Data Mining and Knowledge Discovery (AJDMKD), 2022-2024. </li>
 		<li type="disc"> [Editorial Member] American Journal of Artificial Intelligence (AJAI), 2022-2024. </li>
