--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[08/2024] A tutorial is accepted by IEEE BigData 2024. </li>
 	<li type="circle">[08/2024] I will serve as a reviewer for ICASSP 2025. </li>
-<!-- 	<li type="circle">[08/2024] I will serve as a session chair for the research track of KDD 2024. </li> -->
 	<li type="circle">[08/2024] I will serve as a PC member for WWW 2025. </li>
 	<li type="circle">[08/2024] I will serve as a reviewer for ICLR 2025. </li>
 	<li type="circle">[08/2024] I am invited to serve as the tutorial co-chair for PAKDD 2025. </li>
@@ -498,6 +498,10 @@
 
 
 <h2>Academic Talks</h2>
+  <h3>Tutorials</h3>
+	<ul>
+		<li type="disc">12/2024: <font color=red>Chen Zhao</font>, Xintao Wu. "Supervised Algorithmic Fairness in Distribution Shifts". IEEE International Conference on Big Data, Washington D.C., USA, 2024.</li>
+	</ul>
   <h3>Invited Talks</h3>
 	<ul>
 		<li type="disc">04/2024: Equifax Inc, Equifax DnA University, Online.</li>
