--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[09/2024] I will serve as the Guest Editor for the Journal of Mathematics, MDPI. </li>
 	<li type="circle">[08/2024] A tutorial is accepted by IEEE BigData 2024. </li>
 	<li type="circle">[08/2024] I will serve as a reviewer for ICASSP 2025. </li>
 	<li type="circle">[08/2024] I will serve as a PC member for WWW 2025. </li>
@@ -462,6 +463,7 @@
 	</ul>
   <h3>Others</h3>
 	<ul>
+		<li type="disc"> [<font color=red>Guest Editor</font>] <a href="https://www.mdpi.com/journal/mathematics">Mathematics</a>, MDPI, since 2024.</li>
 		<li type="disc"> [<font color=red>Tutorial Co-Chair</font>] Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD), 2025.</li>
 		<li type="disc"> [<font color=red>Orgnizer</font>, <font color=red>Chair</font>] Workshops on Robust Machine Learning for Distribution Shifts (RobustMLDS), 
 			<ul>
