--- a/index.html
+++ b/index.html
@@ -22,15 +22,16 @@
     <meta name="google-site-verification" content="qEih9m0y-6X0QuisQYfHSxOvkW-o5Q3dfxuQ5Z4JtGA" />
 </head>
 
-<body><!-- Navigation -->
-    <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top"> -->
+<body>
     <nav class="navbar navbar-expand-lg fixed-top" style="background-color: #00205B;">
         <div class="container">
             <strong><a class="text-white navbar-brand" href="index.html"> Chen Zhao </a></strong>
+		
             <button aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"
                 class="navbar-toggler" data-target="#navbarResponsive" data-toggle="collapse" type="button">
                 <span class="navbar-toggler-icon my-toggler"></span>
             </button>
+		
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a class="text-white nav-link" href="publications.html">Publications</a></li>
@@ -42,13 +43,14 @@
             </div>
         </div>
     </nav>
-    <!-- Page Content -->
 
-    <div class="container"><!-- Heading Row -->
+	
+    <div class="container">
         <div class="row my-4">
             <div class="col-lg-3">
-                <img alt="" class="img-fluid rounded img-responsive" src="./files/profile_img.jpg" style="width:80%" />
-
+                <img alt="" class="img-fluid rounded img-responsive" src="./files/profile_img.jpg" style="width:100%" />
+		<br>
+		<br>
                 <p>
                    	<a href="./files/Chen_Zhao_CV.pdf"> <img src="./files/logo-cv.png" height="30px" style="margin-bottom:-3px; margin-right: 10px"> </a>
 			<a href="https://github.com/charliezhaoyinpeng"> <img src="./files/logo-github.png" height="30px" style="margin-bottom:-3px; margin-right: 10px"> </a>
