--- a/students.html
+++ b/students.html
@@ -47,7 +47,19 @@
     <div class="container">
 
         <div class="my-4 text-left">
-            <h2>Teaching</h2>
+            <h2>Students</h2>
+
+            <p style="text-align:justify;background-color:#F2F3F4">
+        		<strong>To Prospective Students</strong>: I am always looking for students with <strong> high motivations</strong> and <strong>strong coding skills</strong> to join my research group or work with me as summer interns. 
+        		There are several RA openings for graduate students in my lab at Baylor University. 
+        		These positions are supported by a monthly stipend and tuition waiver. 
+        		Students are expected to work closely with me on several research projects. Applicants with a degree in related fields (<em>e.g.,</em> CS/CE/EE/STAT) are preferred. 
+        		Research backgrounds in machine learning, artificial intelligence, data mining, big data, and statistics are desired.
+        		If you are interested, please email me your application materials (<em>e.g.,</em> Curriculum Vitae, Publications, GitHub/GitLab Accounts, Undergraduate/Graduate Transcripts, Personal Statement, and GRE/TOEFL Reports).
+        		<br>
+        		<br>
+        		<em>NOTE: Unfortunately, due to the volume of emails, I will not respond to all of them.</em>
+        	</p>
             
             <p><strong>Thesis Committee</strong></p>
             	<ul>
