--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
 	<div class="my-4 text-left">
             <h2>Education</h2>
             <ul>
-                <li>Ph.D. (Computer Science), The University of Texas at Dallas. 2021</li>
-                <li>M.S. (Computer Science), The State University of New York at Albany. 2016</li>
-                <li>M.S. (Biomedical Science), Albany Medical College. 2016</li>
+                <li>Ph.D. (Computer Science), The University of Texas at Dallas, 2021. </li>
+                <li>M.S. (Computer Science), The State University of New York at Albany, 2016. </li>
+                <li>M.S. (Biomedical Science), Albany Medical College, 2016. </li>
             </ul>
         </div>
 
