--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
+		<li>[09/2024] I will serve as a reviewer for AISTATS 2025. </li>
 		<li>[09/2024] I will serve as the Guest Editor for the Journal of Mathematics, MDPI. </li>
 		<li>[08/2024] A tutorial is accepted by IEEE BigData 2024. </li>
 		<li>[08/2024] I will serve as a reviewer for ICASSP 2025. </li>
@@ -113,7 +114,7 @@
 		<li>[05/2024] One paper is accepted by KDD 2024 (research track). </li>
 		<li>[05/2024] I will serve as a PC member for ICDM 2024. </li>  
 		<li>[05/2024] We're delighted to announce that two workshop proposals (RobustMLDS and TrustML4Health) have been accepted by IEEE Bigdata 2024. </li>
-		<li>[04/2024] Two papes are accepted by IJCAI 2024. </li>
+		<li>[04/2024] Two papers are accepted by IJCAI 2024. </li>
 		<li>[04/2024] One paper is accepted by a CVPR 2024 workshop. </li>
 		<li>[04/2024] I am invited to give a research talk by Equifax Inc. </li>  
 		<li>[04/2024] I will serve as a reviewer for the Journal of Advances in Artificial Intelligence and Machine Learning. </li>
