--- a/services.html
+++ b/services.html
@@ -21,14 +21,16 @@
     <meta name="google-site-verification" content="qEih9m0y-6X0QuisQYfHSxOvkW-o5Q3dfxuQ5Z4JtGA" />
 </head>
 
-<body><!-- Navigation -->
+<body>
     <nav class="navbar navbar-expand-lg fixed-top" style="background-color: #00205B;">
         <div class="container">
             <strong><a class="text-white navbar-brand" href="index.html">Chen Zhao</a></strong>
+		
             <button aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"
                 class="navbar-toggler" data-target="#navbarResponsive" data-toggle="collapse" type="button">
                 <span class="navbar-toggler-icon my-toggler"></span>
             </button>
+		
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a class="text-white nav-link" href="publications.html">Publications</a></li>
@@ -42,7 +44,7 @@
     </nav>
 
     
-    <div class="container"><!-- Heading Row -->
+    <div class="container">
 
         <div class="my-4 text-left">
             <h2>Services</h2>
@@ -85,10 +87,11 @@
             </ul>
 
 
-            <p><strong>Program Committee / Reviewer</strong></p>
+            <p><strong>Conference Program Committee / Reviewer</strong></p>
             <ul>
 		    <li>2025: 
 			<ul>
+				<li>International Conference on Artificial Intelligence and Statistics (AISTATS)</li>
 				<li>AAAI Conference on Artificial Intelligence (AAAI)</li>
 				<li>IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</li>
 				<li>International Conference on Learning Representations (ICLR)</li>
