--- a/students.html
+++ b/students.html
@@ -58,7 +58,7 @@
         		If you are interested, please email me your application materials (<em>e.g.,</em> Curriculum Vitae, Publications, GitHub/GitLab Accounts, Undergraduate/Graduate Transcripts, Personal Statement, and GRE/TOEFL Reports).
         		<br>
         		<br>
-        		<em>NOTE: Unfortunately, due to the volume of emails, I will not respond to all of them.</em>
+        		<strong>NOTE</strong>: <em>Unfortunately, due to the volume of emails, I will not respond to all of them.</em>
         	</p>
             
             <p><strong>Thesis Committee</strong></p>
