--- a/services.html
+++ b/services.html
@@ -214,6 +214,14 @@
 		    <li>2024 (x3) </li>
 		    <li>2023 (x1) </li>
 	    </ul>
+
+		
+	    <p><strong>University and Department Services: </strong></p>
+	    <ul>
+		    <li>Judge for the Outstanding Graduate Student Research Award, Baylor University, 2023 - 2024 </li>
+		    <li>Engagement Committee, Department of Computer Science, Baylor University, since 2023 </li>
+		    <li>Graduate Committee, Department of Computer Science, Baylor University, since 2023 </li>
+	    </ul>
 		
             
         </div>
