--- a/services.html
+++ b/services.html
@@ -49,7 +49,7 @@
         <div class="my-4 text-left">
             <h2>Services</h2>
 
-            <p><strong>Chair-ship and Organizer</strong></p>
+            <p><strong>Chair-ship and Organizer </strong></p>
             <ul>
                     <li>2025:
                         <ul>
@@ -79,7 +79,7 @@
             </ul>
 
 
-            <p><strong>Journal Editor</strong></p>
+            <p><strong>Journal Editor </strong></p>
             <ul>
                 <li>[<strong>Guest Editor</strong>] <a href="https://www.mdpi.com/journal/mathematics">Mathematics</a>, MDPI, since 2024.</li>
                 <li>[<strong>Editorial Board Member</strong>] American Journal of Data Mining and Knowledge Discovery (AJDMKD), 2022-2024. </li>
@@ -87,7 +87,7 @@
             </ul>
 
 
-            <p><strong>Conference Program Committee / Reviewer</strong></p>
+            <p><strong>Conference Program Committee / Reviewer </strong></p>
             <ul>
 		    <li>2025: 
 			<ul>
@@ -160,7 +160,7 @@
 
 
 
-            <p><strong>Journal Reviewer: </strong></p>
+            <p><strong>Journal Reviewer </strong></p>
             <ul>
 		    <li>2024:
 			<ul>
@@ -189,7 +189,7 @@
             </ul>
 
 		
-            <p><strong>Workshop Reviewer: </strong></p>
+            <p><strong>Workshop Reviewer </strong></p>
             <ul>
 		    <li>2023:
 			<ul>
@@ -209,14 +209,14 @@
             </ul>
             
 
-            <p><strong>National Science Foundation (NSF) Panelist: </strong></p>
+            <p><strong>National Science Foundation (NSF) Panelist </strong></p>
 	    <ul>
 		    <li>2024 (x3) </li>
 		    <li>2023 (x1) </li>
 	    </ul>
 
 		
-	    <p><strong>University and Department Services: </strong></p>
+	    <p><strong>University and Department Services </strong></p>
 	    <ul>
 		    <li>Judge for the Outstanding Graduate Student Research Award, Baylor University, 2023 - 2024 </li>
 		    <li>Engagement Committee, Department of Computer Science, Baylor University, since 2023 </li>
