--- a/services.html
+++ b/services.html
@@ -78,14 +78,16 @@
                         </ul>
             </ul>
 
+		
 
-            <p><strong>Journal Editor </strong></p>
+            <p><strong>Journal Editorial Board </strong></p>
             <ul>
                 <li>[<strong>Guest Editor</strong>] <a href="https://www.mdpi.com/journal/mathematics">Mathematics</a>, MDPI, since 2024.</li>
                 <li>[<strong>Editorial Board Member</strong>] American Journal of Data Mining and Knowledge Discovery (AJDMKD), 2022-2024. </li>
 		<li>[<strong>Editorial Member</strong>] American Journal of Artificial Intelligence (AJAI), 2022-2024. </li>
             </ul>
 
+		
 
             <p><strong>Conference Program Committee / Reviewer </strong></p>
             <ul>
